# Cracknet

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum
cmd/: main.go  main_test.go
configs/: default.toml
crates/: Cargo.toml
crates/cracknet-cli/: Cargo.toml
crates/cracknet-cli/src/: main.rs
crates/cracknet-core/: Cargo.toml
crates/cracknet-core/src/: analyze.rs  dna.rs  job.rs  lib.rs  progress.rs
crates/cracknet-core/src/algorithms/: bcrypt.rs  matcher.rs  md5.rs  mod.rs  ntlm.rs  sha.rs
crates/cracknet-core/src/attack/: bruteforce.rs  dictionary.rs  hybrid.rs  mod.rs
internal/batch/: filter.go  filter_test.go  parser.go  parser_test.go
internal/bridge/: bridge.go  insight.go
internal/config/: config.go
internal/db/: db.go  db_test.go
internal/display/: ui.go
internal/insight/: dna.go  org.go  report.go  reuse.go  temporal.go
