[package]
name = "cracknet-core"
version = "0.1.0"
edition = "2021"

[dependencies]
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
md4 = "0.10"
bcrypt = "0.15"
pwhash = "1.0"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
digest = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
